--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -12,17 +12,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: Get deps
       run: |
-        sudo yum install -y SDL2-devel
+        sudo yum install -y SDL2-devel ninja-build gtk3-devel
+        ninja
       shell: bash
-    - name: Copy licenses
-      run: |
-        cp LICENSE build/install/
-      shell: bash
-    - uses: vimtor/action-zip@v1
-      with:
-        files: build/install/
-        recursive: false
-        dest: gpuvis-linux.zip
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
@@ -30,4 +22,4 @@ jobs:
         prerelease: true
         title: Gpuvis Linux
         files: |
-          gpuvis-linux.zip
+          build/gpuvis
