--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Get deps
       run: |
-        sudo yum install -y SDL2-devel ninja-build gtk3-devel
+        yum install -y SDL2-devel ninja-build gtk3-devel
         ninja
       shell: bash
     - uses: "marvinpinto/action-automatic-releases@latest"
