--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -12,8 +12,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Get deps
       run: |
-        dnf install dnf-plugins-core
-        dnf install epel-release
+        dnf install dnf-plugins-core -y
+        dnf install epel-release -y
         dnf config-manager --set-enabled powertools
         dnf update
         yum install -y SDL2-devel ninja-build gtk3-devel
