--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -15,7 +15,7 @@ jobs:
         dnf install dnf-plugins-core -y
         dnf install epel-release -y
         dnf config-manager --set-enabled powertools -y
-        yum install SDL2-devel ninja-build gtk3-devel cmake clang -y
+        yum install SDL2-devel ninja-build gtk3-devel cmake clang libstdc++-devel -y
       shell: bash
     - name: Build
       run: |
