--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Get deps
       run: |
-        apt install libsdl2-dev ninja-build libgtk-3-dev cmake clang build-essential -y
+        sudo apt install libsdl2-dev ninja-build libgtk-3-dev cmake clang build-essential -y
       shell: bash
     - name: Build
       run: |
