--- a/.github/workflows/build-rocky-linux.yml
+++ b/.github/workflows/build-rocky-linux.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master ]
 
 jobs:
-  container:
+  build-rocky-linux:
     runs-on: ubuntu-latest
     container: rockylinux:8
     steps:
