--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master ]
 
 jobs:
-  container:
+  build-ubuntu-linux:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
